--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.232.133.111:9980/mss/repository/paytm-releases/</url>
+	      <url>http://http://3.17.187.161:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.232.133.111:9980/mss/repository/paytm-snapshot/</url>
+	      <url>http://http://3.17.187.161:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
